# shokan-llm

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  backup_data.sh  k8s-setup.sh  minikube-setup.sh  pytest.ini  restore_credentials.sh  restore_data.sh
.claude/commands/: permissions.md
core/: Dockerfile  pyproject.toml
core/permissions/: README.md  model.fga
core/src/: __init__.py  config.py  main.py
core/src/connectors/: a2a.py  k8s.py  keycloak.py  litellm.py  mcp.py  mcp_client.py  ollama.py  openfga.py  rag.py
core/src/jobs/: chat_cleanup.py  ingest.py
core/src/pages/: chat.py  datalake.py  groups.py  models.py  permissions.py  profile.py  rag.py  roles.py  shared.py  system.py  users.py
core/src/services/: agents.py  audit.py  chat.py  chat_storage.py  export_import.py  groups.py  litellm_config.py  models.py  permissions.py  rag_config.py  skills.py  users.py
core/src/skills/: default.md
core/src/templates/: crud_template.py  dialogs.py  permission_picker.py
installer/: install.sh  utils.sh  versions.yaml
installer/values/: keycloak.yaml  openfga.yaml  postgresql.yaml
tests/: run_tests.sh
tests/core/: conftest.py  test_connectors.py  test_infra.py  test_login.py  test_services_audit.py  test_services_chat.py  test_services_export_import.py  test_services_permissions.py  test_ui_chat.py  test_ui_datalake.py  test_ui_models.py  test_ui_nav.py  test_ui_profile.py  test_ui_roles.py  test_ui_settings.py  test_ui_system.py  test_ui_users.py
tests/installer/: test_install.sh
tests/setup/: test_minikube.sh
tools/keycloak-helm/: Chart.yaml  values.yaml
tools/keycloak-helm/templates/: deployment.yaml  ingress.yaml  service.yaml
tools/litellm-helm/: ADVANCED.md  Chart.yaml  README.md  VERIFICATION.md  install-litellm.sh  pyproject.toml  values-production.yaml  values.yaml
tools/litellm-helm/templates/: NOTES.txt  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  service.yaml
tools/ollama-helm/: ADVANCED.md  Chart.yaml  README.md  VERIFICATION.md  install-ollama.sh  pyproject.toml  values-production.yaml  values.yaml
tools/ollama-helm/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  service.yaml
tools/shokan-core-helm/: Chart.yaml  values.yaml
tools/shokan-core-helm/templates/: _helpers.tpl  cronjob.yaml  deployment.yaml  ingress.yaml  pvc.yaml  rbac.yaml  service.yaml
