[project]
name = "shokan-core"
version = "0.1.0"
description = "Shokan-LLM Core — Agentic AI Infrastructure Platform"
requires-python = ">=3.11"
dependencies = [
    "nicegui>=1.4.0",
    "httpx>=0.27.0",
    "authlib>=1.3.0",
    "itsdangerous>=2.1.0",
    "starlette>=0.37.0",
    "kubernetes>=30.1.0",
    "python-dotenv>=1.0.0",
    # ingester
    "qdrant-client>=1.9.0",
    "google-api-python-client>=2.120.0",
    "google-auth>=2.28.0",
    "boto3>=1.34.0",
    "paramiko>=3.4.0",
    "pypdf>=4.2.0",
    "python-docx>=1.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

# ── ruff ───────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # function call in default argument (common in FastAPI/NiceGUI)
]

[tool.ruff.lint.isort]
known-first-party = ["pages", "core", "templates", "config"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ── pytest ─────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
